--- a/react/firstReact.html
+++ b/react/firstReact.html
@@ -1,19 +1,31 @@
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Hello React</title>
-    </head>
-    <body>
-        <div id="root">
-            <h1>First React page rendering...</h1>
-        </div>
-        
-        <script crossorigin="" src="https://unpkg.com/react@16/umd/react.development.js"></script>
-        <script crossorigin="" src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script> 
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Hello React</title>
+</head>
+
+<body>
+    <div id="root">
+        <h1>First React page rendering...</h1>
+    </div>
+    <div id="next">
+        <h3>something else</h3>
+    </div>
+
+    <script crossorigin="" src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin="" src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+
     <script>
-    const App = React.createElement("h1", {}, "Our First React page has rendered");
-    ReactDOM.render(App, document.getElementById("root"));
-</script>
+        const App = React.createElement("h1", null, "Our First React page has rendered");
+        const mC = React.createElement("div", null, App, App, App, App, App, React.createElement("p", {}, "This element is nested"))
+        ReactDOM.render(mC, document.getElementById("root"));
+    </script>
+    <!-- <script type="text/babel">
+        const App = () => <h1>Our First React page has rendered</h1>;
+        // ReactDOM.render(<App></App>, document.getElementById("next"));
+        ReactDOM.render(<App />, document.getElementById('next'));
+    </script> -->
+</body>
 
 </html>
